--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -11,20 +11,20 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Bubble Navigation
-    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
+    implementation "com.gauravk.bubblenavigation:bubblenavigation:$bubble_navigation"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // CircleProgressBar
-    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+    implementation "com.mikhaellopez:circularprogressbar:$circular_progress_bar"
 
     //YoutubePlayer
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:$android_youtube_player"
 
     //Arc Layout
-    implementation 'com.github.florent37:arclayout:1.0.5'
+    implementation "com.github.florent37:arclayout:$arc_layout"
 
     // ViewModel Dependency
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
